--- a/room1.html
+++ b/room1.html
@@ -13,7 +13,12 @@
   <link rel="stylesheet" href="css/styles.css?v=1.0">
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="room1.css">
-
+<style type="text/css">
+  
+  #main {
+    height: 100%;
+  }
+</style>
 <script>
   $(document).ready(function() {
     $( 'body' ).hide().fadeIn(1000);
@@ -40,8 +45,8 @@
         <input id="ddddd"  placeholder="" type="text" disabled/>
       </div>
     </div>
+   </div>
   </div>
-</div>
 </div>
 
 </body>
