--- a/room2.html
+++ b/room2.html
@@ -46,10 +46,12 @@
    <div id="middle" class="Aligner-item center">
     <div class="light">
       <div id="image" style="background: white; width: 1000px; height: 100px;"></div>
-      <div class="content" style="padding-top: 30px"><p>
+      <div class="content" style="padding-top: 30px">
+
+  <p>
         3/24 - During my favourite sitcom, I noticed an unpalatable hissing in the audio. I'll ask the husband about it when he gets home. He's out now.
 </p><p>
-3/27 - It seems the hissing grows more violent with each channel. By three-twenty-four, the actor's voices were indiscernible. 
+3/27 - 
 </p><p>
 
 4/8 -  After a week of listening, I've discerned four consistent syllables: Nn, tt, mm, and ou. It also appears that the hissing acts independently of the television's volume--I tried to adjust the knob, and it fell off.
@@ -58,22 +60,22 @@
 4/1 - Today, a tornado hit our home. The husband was out.
 </p><p>
 
-6/3 - Channel three-twenty-four has found its way into my dreams. I woke up on the couch parallel to the television this morning. The hissing is definitively clearer in my dreams. I heard a t on the end of the ou and and an i somewhere in the nn. My son calls, also. He plans to visit me soon.
+6/3 - Channel three-twenty-four has found its way into my dreams. I woke up on the couch parallel to the television this morning. The hissing is definitively clearer in my dreams. I heard a t on the end of the ou and and an i slurred before the nn. My son calls. He plans to visit soon.
 </p><p>
 
 6/24 - My son is coming at the end of the month. It's possible I haven't slept. 
 </p><p>
 
-6/31 - The static has started pouring from the tv. I can see the gray and white rectangles scatter on the carpet. Attempting to vaccum them results only in an indiscernable hissing from the vaccum cleaner. Nn. Tt. Ou.
+6/31 - Static has started pouring from the tv. I can see the gray and white rectangles scatter across the carpet. Attempting to vacuum results only in an indiscernable hissing from the vacuum cleaner. Nn. Tt. Ou.
 </p><p>
 
-7/1 - My son visited. He asks immediately about the hissing from the television and observes a fallen sattelite in our backyard. He tells me that must be the reason for the hiss. I tell him about tt and mm. He looks at me sadly. (The husband was out.) My son fixed the sattelite before he left. He turned the station to my favourite sitcom, and told me something I appreciated.
+7/1 - My son visited. He asks immediately about the hissing from the television and observes a fallen satellite in our backyard. He tells me that must be the reason for the hiss. I tell him about tt and mm. He looks at me sadly. (The husband was out.) My son fixed the satellite before he left. He turned the station to my favourite sitcom, and told me something I appreciated.
 </p><p>
 
-7/18 - I lied to my son. Those weeks ago, he'd laughed at the sitcom, and told me something, but when he spoke I heard only an unpalatable hissing. The sattelite is still laying in grass of our yard. 
+7/18 - I lied to my son. Those weeks ago, he'd laughed at the sitcom, and told me something, but when he spoke I heard only an unpalatable hissing. The satellite is still laying in grass of our yard. 
 </p><p>
 
-7/32 - The static has started pouring from the tv. I can see the gray and white rectangles scatter on the carpet. Attempting to vaccum the static results only in an indiscernable hissing from the vaccum cleaner. When I returned to the couch, the television was on channel three-two-four again.
+7/32 - The static has started pouring from the tv. I can see the gray and white rectangles scatter on the carpet. Attempting to vacuum the static results only in an indiscernable hissing from the vacuum cleaner. When I returned to the couch, the television was on channel three-two-four again.
 </p><p>
 
 7/46 - My son visits, again. He steps over the static on the carpet. Before leaves, he hugs me, and the white and gray rectangles on his arms cut slivers into  back. The pain hisses. 
@@ -82,7 +84,7 @@
 13/56 - Despite the passage of several months, the wounds have yet to close. After falling asleep on the couch, I awoke with a remote in my hand and an incompleted channel number typed into the television screen. 
 </p><p>
 
-42/3 - I was able to at last change the station from three-two-four. Unfortunately, when I try to press the button, my thumb turned into gray rectangles. My son calls. He should be coming to visit soon. There’s a new episode of his favourite sit-com on. He asks again about channel three hundred and four, but the static blurs his voice into nondescript syllables. He reaches his arm through the receivere his gray and white bled into mine and slice my jaw off my face. It falls to the carpet and succumbs to static. I’ll ask the husband to fix it when he gets in. He’s out now.
+42/3 - I was able to at last change the station from three-two-four. Unfortunately, when I try to press the button, my thumb pixellized into gray rectangles. My son calls. He should be coming to visit soon. There’s a new episode of his favourite sit-com. He asks again about channel three hundred and four, but the static blurs his voice into nondescript syllables. He reaches his arm through the receivere his gray and white bled into mine and slices my jaw from my face. It falls to the carpet and succumbs to static. I’ll ask the husband to fix it when he gets in. He’s out now.
 </p>
       </div>
     </div>
