--- a/room3.html
+++ b/room3.html
@@ -15,14 +15,21 @@
   <style>
   body {
     height: 100vh;
-    position: fixed;
+    position: relative;
   }
   .content {
+    margin-bottom: 10px;
+    padding: 0px;
     display: inline-flex;
     /*background-image: url('img/longdream.jpg');
     background-position: 100%;*/
 
   }
+
+  .content ::-webkit-scrollbar { 
+    display: none; 
+  }
+
   .content, .content img {
     height: 100%;
   }
@@ -46,6 +53,10 @@
     font-size: 16px;
     line-height: 1;
     text-shadow: none;
+  }
+
+  .content h2 {
+    font-size: 20px;
   }
   .content .text p, .content .text h2 {
 
@@ -76,13 +87,33 @@
       <p>
         ddddddddddddd likened himself to THE SCARECROW. 
       </p><p>
-      I read about a patient with disordered dreaming. Twenty-six months to a night's sleep. Then twenty-six centuries, then longer still. By his penultimate rest, the patient's body has undergone the next four million years of human evolution: his straw skin, his pulsing orb eyes, his face swollen beyond the elasticity of the human skull. a sleep that stays. In the morning, NURSE opens a window. The innocent breeze turns the Long Dreamer’s crystallized body to dust.
+      A horror story I find particularly striking. A patient ailed with long dreams. In a night’s sleep, he’ll dream for ten months. Then twenty. Then a century. Then longer. By his penultimate rest, the patient's body has undergone the next four million years of human evolution. His straw skin, his pulsing orb eyes, his head swollen beyond the elasticity of the human skull. a sleep that stays. In the morning, the NURSE opens a window; the innocent breeze whisks the Long Dreamer’s crystallized body to dust.
       </p><p>
-        THE SCARECROW, dddddddddddd claimed, knew “All that had and all that would.” then added that such knowledge was too overwhelming. It couldn’t be processed in the elasticity of human understanding. Thus, THE SCARECROW, who knew everything, could know nothing.
+        THE SCARECROW, dddddddddddd claimed, knew. “All that had and all that would.” then added that such knowledge was too overwhelming. It couldn’t be processed in the elasticity of human understanding. Thus, THE SCARECROW, who knew everything, could know nothing.
       </p><p>
-        Later, as an insult, dddddddddddddddd likened me to TOTO. I found it more appropriate than insulting. TOTO was the only one who didn’t see Oz in color.
+        Later, as an insult, dddddddddddddddd likened me to TOTO.
       </p><p>
-      (Under microscopes, the doctors found traces of an unidentifiable stimulant in the dreamer’s particles.)</p>
+        (Under microscopes, the doctors found traces of an unidentifiable stimulant in the dreamer’s particles.)</p>
+    </div>
+  </div>
+  <div class="content">
+    <div class="text"><h2>1. You will Look and Feel Better!</h2>
+      <p>A final text from dddddd to MOM: “Given the choice between KANSAS and OZ, we’d chose KANSAS, because of love.”
+      </p>
+      <p>You convince yourself it’s better than it is. it will be. Trypophobia is the fear of compulsive fungus in your pores. It is the belief that sebum can be removed with oily fingers. A firm press for an easy relapse. In a mirror with a heavy magnification, it seeps the hollow to every hole. It is a way dissolve without Look.</p> 
+      <p>It is Healthy.</p>
+        <p>Push the fungus. Amputate a face. You will Look better. That will make you Feel better. You will Look and Feel better. You will Feel better, and Look better, and that will make it
+      </p>
+      <p>(The day of ddddddddddddds ffffffffffffffffffnnrl, I emptied my face for hours.)</p>
+    </div>
+    <img src="img/thewizardof.jpg" />
+  </div>
+  <div class="content">
+    <img src="img/overthe.jpg" />
+    <div class="text"><h2>2. H</h2>
+      <p>how many sbbbblngssssss do you have?</p>
+      <p>Trying to remember anything ddddddddd said to me. Color TV is just a series of specs. Pantone dots. Nonsense static if too close, but with distance-- The usual stepback. The 2 hour 5 minute movie is less sensational in black and white, but TOTO is the only one who doesn't see Oz in color.</p>
+      <p>With distance, the circles resemble a face.</p>
     </div>
   </div>
 </div>
