--- a/room8.html
+++ b/room8.html
@@ -36,12 +36,12 @@
     margin: auto;
     opacity: 1;
     width: 100%;
-    background-size: 177px;
     height: 100%;
-    background-image: url("img/oilslick.png");
+    background-image: url("img/sizechart.png");
     background-repeat: no-repeat;
+    background-size: unset;
     text-align: center;
-    background-position: center;
+    background-position: top;
   }
 </style>
 <script>
@@ -55,6 +55,7 @@
 </script>
 </head>
 <body>
+
 
  <div id="main" class="hatch rise">
   <div class="side Aligner left" >
