--- a/room7.html
+++ b/room7.html
@@ -9,10 +9,9 @@
   <meta name="author" content="SitePoint">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-  <script type='text/javascript' src='bug-min.js'></script>
+  <script type='text/javascript' src='bug.js'></script>
     <script type='text/javascript'>
         new BugController({'minBugs':2, 'maxBugs':2, 'minDelay': 10,'maxDelay': 11, 'mouseOver':'fly'});
-
     </script>
   <script src="https://cdn.jsdelivr.net/npm/typeit@5.3.0/dist/typeit.min.js"></script>
   <link rel="stylesheet" href="css/styles.css?v=1.0">
