--- a/roomW/household.html
+++ b/roomW/household.html
@@ -243,8 +243,8 @@
 
 .type('In returning home from work, I inspect the condition of the mold and it\'s')
 .empty().pause(3000).options({speed: 60})
-        .type('though holding no prior relevance to gray infected textile sewn with off-red veinery, some type of 1950s vintage needle kit, receeding ventillation into oxidized spores, contributing to the spread of the pulsing prior, mathematical geometries on wallpaper obscured by growing fungus, kansasesque gray covered in complete circles, incompleteness circles swirling pulsing blue liquid serrating clensing absestos calloused over off-red poppy print walling then resetting, relevant, reverent, rectangulant,')
-        .type(' reclusant, in response to touch, to particular pulsing priors founded stalling electric wirelike liquid scalding through rusted pipery, as expected disconnected circutry leaks pusslike, as dirt, as water, as grease-darkened vertigo patterns, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
+        .type('though holding no prior relevance to gray infected textile sewn with off-red veinery, some type of 1950s vintage needle kit, receding ventilation into oxidized spores, contributing to the spread of the pulsing prior, mathematical geometries on wallpaper obscured by growing fungus, kansasesque gray covered in complete circles, incompleteness circles swirling pulsing blue liquid serrating cleansing asbestos calloused over off-red poppy print walling then resetting, relevant, reverent, rectangulant,')
+        .type(' reclusant, in response to touch, to particular pulsing priors founded stalling electric wirelike liquid scalding through rusted pipery, as expected disconnected circuits leaks pusslike, as dirt, as water, as grease-darkened vertigo patterns, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
         .pause(200)
         .empty();
 
@@ -287,7 +287,7 @@
 .pause(1000)
 .delete(4)
 .pause(1000)
-.type('living skinned in a grotesque fungus is unfitting for a family such as ours to be living in. ')
+.type('living all but skinned in such a grotesque fungus is unfitting for a family as ours.')
 .pause(5000)
 .type('Thus,')
 .pause(700)
@@ -295,7 +295,7 @@
 .pause(200)
 .break()
 .pause(200)
-.type('The only resolution is the complete removal of the walling from the household.')
+.type('I have decided, the only resolution is the complete removal of the wallpaper from the household.')
 .pause(3000)
 .empty();
 
