--- a/room11.html
+++ b/room11.html
@@ -15,6 +15,7 @@
 <style type="text/css">
   .hatch {
     background: white;
+    min-height: 1100px;
   }
 
   #main.hatch {
@@ -35,39 +36,41 @@
     border-radius: 0px;
     margin: auto;
     opacity: 1;
+    background-color: rgb(20, 24, 51);
     width: 100%;
-    height: 100%;
-    background-image: url("img/sizechart.png");
+    height: 200%;
+    background-image: url("img/hyperventilatiac2.jpg");
     background-repeat: no-repeat;
-    background-size: unset;
+    background-size: 100%;
     text-align: center;
     background-position: top;
   }
 </style>
 <script>
   $(document).ready(function() {
-    $( 'body' ).hide().fadeIn(1000);
+    $( 'body' ).hide().fadeIn(1000, function() {
+    alert("[Press Play to Listen. Scroll down to Look.]");
+    });
   });
-
-  function setCenter(str) {
-    $("#ddddd").val(str);
-  }
 </script>
 </head>
 <body>
 
- <div id="main" class="hatch rise">
+ <div id="main" class="hatch rise" stlye="text-align: center">
+        <audio controls="controls" style="position: fixed; left: 45%; min-width: 133px; width: 10%; margin: 0 auto;">
+        <source src="music/hyperventilatiac.mp3" type="audio/mp3">
+          Your browser does not support the <code>audio</code> element. 
+        </audio>
   <div class="side Aligner left" >
-    <a class="Aligner-item" id="left" href="room10.html"><img src="arrow-left.png"/></a>
+    <a class="Aligner-item" id="left" href="room10.html"><img src="arrow-left-light.png"/></a>
   </div>
   <div class="side Aligner right">
-    <a class="Aligner-item"  id="right" href="room12.html"><img src="arrow-right.png"/></a>
+    <a class="Aligner-item"  id="right" href="room12.html"><img src="arrow-right-light.png"/></a>
   </div>
   <div class="Aligner">
    <div id="middle" class="Aligner-item center">
     <div class="light">
       <div class="content">
-        <input id="ddddd"  placeholder="" type="text" disabled/>
       </div>
     </div>
   </div>
