finished all rooms!

--- a/room12.html
+++ b/room12.html
@@ -30,11 +30,13 @@
   .light {
     background: transparent;
     width: 100%;
+    height: 1000px;
   }
 
   #main.hatch {
 
      background-color: rgb(14, 15, 38);
+    height: 1000px;
   }
 
   #middle {
@@ -43,13 +45,22 @@
     opacity: 1;
     width: 900px;
     max-width: 100%;
-    height: 100%;
+    height: 1000px;
     background-image: url("img/francis.png");
     background-repeat: no-repeat;
     background-size: 100%;
      background-color: rgb(14, 15, 38);
     text-align: center;
     background-position: top;
+  }
+  p {
+    text-shadow: none;
+     background-color: rgb(14, 15, 38);color: rgb(99, 113, 182);
+
+    font-size: 16px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 </style>
 <script>
@@ -71,7 +82,7 @@
     <a class="Aligner-item" id="left" href="room11.html"><img src="arrow-left-light.png"/></a>
   </div>
   <div class="side Aligner right">
-    <a class="Aligner-item"  id="right" href="room12.html"><img src="arrow-right-light.png"/></a>
+    <a class="Aligner-item"  id="right" href="room13a.html"><img src="arrow-right-light.png"/></a>
   </div>
   <div class="Aligner">
    <div id="middle" class="Aligner-item center">
@@ -80,7 +91,35 @@
       </div>
     </div>
   </div>
+
 </div>
+
+<p>Foster parents always get my name wrong /
+the gun in their desk drawer barely fits around my fingers / symmetry / like she /
+'you can count sheep or go to sleep'</p>
+<p>
+Foster parents can't tell anything's wrong /
+Empty bullet shells pour down the asphalt / 
+Falling wondering, calling coming / A bell rings </p>
+
+<p> it's my fault / pour the asphalt
+Another time / I--why? </p>
+<p>
+A low a loan paid back in full / the color of moms hair /
+always back in that school </p>
+
+<p>
+Solitary confinemen center's so-so / 
+sometimes they forget to give me food /
+A once in a lifetime chance to gob ack to school /
+to pay it back in full</p>
+
+<p>Foster friends always get my name wrong / 
+Keeps a means to the awful ends with alplomb /
+the wrists in their bare skin fit around my tiny fingers / symmetry / and me / like she / like she
+/ like she / count sheep or go to sleep</p>
+
+<p>[Mom's soft hands always / Mom's soft hands always / count sheep or go to / / / / ////////////////////</p>
 </div>
 </body>
 </html>
