--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   });
 
     $("#left").mouseenter(function () {
-      setCenter("Room 0")
+      setCenter("[The hallway is blocked.]")
     });
 
     $("#left").click(function () {
@@ -57,7 +57,7 @@
 
 
     $("#right").mouseenter(function () {
-      setCenter("Room 1")
+      setCenter("[Go to Room 1]")
     });
 
     $("#right").click(function () {
@@ -89,7 +89,7 @@
 <audio src="music/room1.mp3" loop="true" autoplay hidden ></audio>
  <div id="main" class="hatch rise">
   <div class="side Aligner left" >
-    <a class="Aligner-item" id="left" href="room0.html"><img src="arrow-left.png"/></a>
+    <a class="Aligner-item" id="left"><img src="arrow-left.png"/></a>
   </div>
   <div class="side Aligner right">
     <a class="Aligner-item"  id="right" href="room1.html"><img src="arrow-right.png"/></a>
