--- a/room5.html
+++ b/room5.html
@@ -66,7 +66,7 @@
     <a class="Aligner-item" id="left" href="room4.html"><img src="arrow-left.png"/></a>
   </div>
   <div class="side Aligner right">
-    <a class="Aligner-item"  id="right" href="roomW/household.html"><img src="arrow-right.png"/></a>
+    <a class="Aligner-item"  id="right" href="roomW/hisroom.html"><img src="arrow-right.png"/></a>
   </div>
   <div class="Aligner">
    <div id="middle" class="Aligner-item center">
