--- a/room7.html
+++ b/room7.html
@@ -62,7 +62,7 @@
 
  <div id="main" class="hatch rise">
   <div class="side Aligner left" >
-    <a class="Aligner-item" id="left" href="roomW/household.html"><img src="arrow-left.png"/></a>
+    <a class="Aligner-item" id="left" href="roomW/hisroom.html"><img src="arrow-left.png"/></a>
   </div>
   <div class="side Aligner right">
     <a class="Aligner-item"  id="right" href="room8.html"><img src="arrow-right.png"/></a>
